--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Testas</title>
   <base href="/">
 
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM"></script>-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
