--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/testas/favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM"></script>
   
 </head>
 <body>
