--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Testas</title>
-  <base href="/">
+  <base href="/testas/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+  <link rel="icon" type="image/x-icon" href="/testas/favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM&callback=initMap">
+
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.4a4e621391af5df7be01.bundle.js"></script><script type="text/javascript" src="main.50c120bce8cb1cfe16e6.bundle.js"></script></body>
 </html>
