--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Testas</title>
   <base href="/">
 
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM&callback=initMap">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/testas/favicon.ico">
   
