--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Testas</title>
   <base href="/testas/">
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM&callback=initMap">  
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM&callback=initMap">  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/testas/favicon.ico">
 
