--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,13 @@
   <title>Testas</title>
   <base href="/">
 
-  <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
-    </script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
+  </script>
 </body>
 </html>
