--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Testas</title>
-  <base href="/testas/">
+  <base href="/SportEnjoyProject-client/">
 
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
