--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Testas</title>
-  <base href="/testas/">
+  <title>Sportenjoy</title>
+  <base href="/sportenjoy/">
 
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
