--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
   </script>
+  <script src="//connect.facebook.net/en_US/sdk.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
 </head>
 <body>
   <app-root>Loading...</app-root>
