--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
   </script>
+  <script src="//connect.facebook.net/en_US/sdk.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.2790b60e3a62dfb1e992.bundle.js"></script><script type="text/javascript" src="main.9a6dd7e1d66578897d2e.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.023c816c8f23d2f574db.bundle.js"></script><script type="text/javascript" src="main.773c3db4bd370fd4c872.bundle.js"></script></body>
 </html>
