--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
   </script>
-  <script src="//connect.facebook.net/en_US/sdk.js"></script>
+  <script src="//connect.facebook.net/en_US/sdk.js" async defer></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
