--- a/404.html
+++ b/404.html
@@ -8,12 +8,13 @@
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGMkgxkPh9OchfxtnYFAB2m_SqnuKI5dM">
   </script>
-  <script src="//connect.facebook.net/en_US/sdk.js"></script>
+  <script src="//connect.facebook.net/en_US/sdk.js" async defer></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.023c816c8f23d2f574db.bundle.js"></script><script type="text/javascript" src="main.773c3db4bd370fd4c872.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.023c816c8f23d2f574db.bundle.js"></script><script type="text/javascript" src="main.91cb329d86d4174e9845.bundle.js"></script></body>
 </html>
